list liked trainings
